--- a/main/template/datatable.html
+++ b/main/template/datatable.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<div class="container-sm mt-3">
-    <div class="container-fluid text-white pt-2 text-center">
+<div class="container-sm mt-1">
+    <div class="container-fluid bg-primary text-white pt-2 text-center">
         <h4>WATTMETER:  <span id="ID"> </span> <span class="dot"></span> </h4>
     </div>
     <table class="table  table-dark text-center">
@@ -97,17 +97,5 @@
 
     <div id="evseContainer">
     </div>
-        <canvas id="powerGraph" height ="300px" style="max-height: 400px;">
-            <p>Your browser does not support the canvas element.</p>
-        </canvas>
-
-        <canvas id="energyGraph_hourly" height ="300px" style="max-height: 400px;">
-            <p>Your browser does not support the canvas element.</p>
-        </canvas>
-        
-        <canvas id="energyGraph_daily" height ="300px" style="max-height: 400px;">
-            <p>Your browser does not support the canvas element.</p>
-        </canvas>
-
      </div>
                      
