--- a/main/template/main.html
+++ b/main/template/main.html
@@ -15,12 +15,14 @@
    
     <body onload="loadLibrary()">
 
-        <nav> 
-            <ul class="menu">
-                <li><a id="main" class="active" >OVERVIEW</a></li>
-                <li><a id="settings">SETTINGS</a></li>
-             </ul>
-        </nav>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="#" id="main" onclick="closeNav()">Overview</a>
+          <a href="#" id="settings" onclick="closeNav()">Settings</a>
+          <a href="#" id="powerChart" onclick="closeNav()">Power chart</a>
+          <a href="#" id="energyChart" onclick="closeNav()">Energy chart</a>
+        </div>
+        <span id="sideText" style="font-size:30px;cursor:pointer; color:#ffffff;" onclick="openNav()">&#9776; Overview</span>
         
       <!-- Loading Spinner Wrapper-->
         <div class="loader text-center">
@@ -40,8 +42,12 @@
                 <h4 class="text-uppercase font-weight-bold">Loading</h4>
             </div>
         </div>
+              
+        <div class="mainContainer">
         
-        <div class="mainContainer"></div>
+        
+        
+        </div>
 
     </body>
     
