--- a/main/template/datatable.html
+++ b/main/template/datatable.html
@@ -38,16 +38,28 @@
                 <td><span id="PF3">-,-</span></td>
             </tr>
             <tr>
-                <td>Positive peak [kW]</td>
+                <td>&#x2191; Peak [kW]</td>
                 <td><span id="PP1_peak">-,-</span></td>
                 <td><span id="PP2_peak">-,-</span></td>
                 <td><span id="PP3_peak">-,-</span></td>
             </tr>
             <tr>
-                <td>Negative peak [kW]</td>
+                <td>&#x2193; Peak [kW]</td>
                 <td><span id="PN1_peak">-,-</span></td>
                 <td><span id="PN2_peak">-,-</span></td>
                 <td><span id="PN3_peak">-,-</span></td>
+            </tr>
+            <tr>
+                <td>&#x2191; Daily E [kWh]</td>
+                <td><span id="E1_daily_positive">-,-</span></td>
+                <td><span id="E2_daily_positive">-,-</span></td>
+                <td><span id="E3_daily_positive">-,-</span></td>
+            </tr>
+            <tr>
+                <td>&#x2193; Daily E [kWh]</td>
+                <td><span id="E1_daily_negative">-,-</span></td>
+                <td><span id="E2_daily_negative">-,-</span></td>
+                <td><span id="E3_daily_negative">-,-</span></td>
             </tr>
             <tr>
                 <td>HDO [ON/OFF]</td>
