--- a/main/template/main.html
+++ b/main/template/main.html
@@ -20,7 +20,7 @@
           <a href="#" id="main" onclick="closeNav()">Overview</a>
           <a href="#" id="settings" onclick="closeNav()">Settings</a>
           <a href="#" id="powerChart" onclick="closeNav()">Power chart</a>
-          <a href="#" id="energyChart" onclick="closeNav()">Energy chart</a>
+          <a href="#" id="energyChart" onclick="closeNav()">Energy charts</a>
         </div>
         <span id="sideText" style="font-size:30px;cursor:pointer; color:#ffffff;" onclick="openNav()">&#9776; Overview</span>
         
