--- a/main/template/energyChart.html
+++ b/main/template/energyChart.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <div class="container-sm mt-1">
     <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h4>HOURLY ENERGY CHART</h4>
+        <h6>HOURLY ENERGY CONSUMPTION</h6>
     </div>
         <canvas id="energyGraph_hourly" height ="430px" style="max-height: 430px;">
             <p>Your browser does not support the canvas element.</p>
         </canvas>
         
             <div class="container-fluid bg-primary text-white mt-4 pt-2 text-center">
-        <h4>DAILY ENERGY CHART</h4>
+        <h6>DAILY ENERGY CONSUMPTION</h6>
     </div>
                 <canvas id="energyGraph_daily" height ="430px" style="max-height: 430px;">
             <p>Your browser does not support the canvas element.</p>
