--- a/main/template/powerChart.html
+++ b/main/template/powerChart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="container-sm mt-1">
     <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h4>MINUTE POWER CHART</h4>
+        <h6>MINUTE POWER CONSUMPTION</h6>
     </div>
     <canvas id="powerGraph" height ="430px" style="max-height: 430;">
         <p>Your browser does not support the canvas element.</p>
