--- a/main/template/main.html
+++ b/main/template/main.html
@@ -17,7 +17,8 @@
 
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="#" id="main" onclick="closeNav()">Overview</a>
+          <a href="#" id="overview" onclick="closeNav()">Overview</a>
+          <a href="#" id="data" onclick="closeNav()">Data</a>
           <a href="#" id="settings" onclick="closeNav()">Settings</a>
           <a href="#" id="powerChart" onclick="closeNav()">Power chart</a>
           <a href="#" id="energyChart" onclick="closeNav()">Energy charts</a>
