--- a/main/template/datatable.html
+++ b/main/template/datatable.html
@@ -40,27 +40,27 @@
             </tr>
             <tr>
                 <td>&#x2191; Peak [kW]</td>
-                <td><span id="PP1_peak">-,-</span></td>
-                <td><span id="PP2_peak">-,-</span></td>
-                <td><span id="PP3_peak">-,-</span></td>
+                <td><span id="PP1p">-,-</span></td>
+                <td><span id="PP2p">-,-</span></td>
+                <td><span id="PP3p">-,-</span></td>
             </tr>
             <tr>
                 <td>&#x2193; Peak [kW]</td>
-                <td><span id="PN1_peak">-,-</span></td>
-                <td><span id="PN2_peak">-,-</span></td>
-                <td><span id="PN3_peak">-,-</span></td>
+                <td><span id="PN1p">-,-</span></td>
+                <td><span id="PN2p">-,-</span></td>
+                <td><span id="PN3p">-,-</span></td>
             </tr>
             <tr>
                 <td>&#x2191; Daily E [kWh]</td>
-                <td><span id="E1_daily_positive">-,-</span></td>
-                <td><span id="E2_daily_positive">-,-</span></td>
-                <td><span id="E3_daily_positive">-,-</span></td>
+                <td><span id="E1dP">-,-</span></td>
+                <td><span id="E2dP">-,-</span></td>
+                <td><span id="E3dP">-,-</span></td>
             </tr>
             <tr>
                 <td>&#x2193; Daily E [kWh]</td>
-                <td><span id="E1_daily_negative">-,-</span></td>
-                <td><span id="E2_daily_negative">-,-</span></td>
-                <td><span id="E3_daily_negative">-,-</span></td>
+                <td><span id="E1dN">-,-</span></td>
+                <td><span id="E2dN">-,-</span></td>
+                <td><span id="E3dN">-,-</span></td>
             </tr>
             <tr>
                 <td>HDO [ON/OFF]</td>
@@ -92,18 +92,18 @@
         <tbody> 
             <tr>
                 <td colspan='2'>Total  [kWh]</td>
-                <td ><span id="Total_Energy_positive">-,- </span></td>
-                <td ><span id="Total_Energy_negative">-,-</span></td>
+                <td ><span id="Total_EP">-,- </span></td>
+                <td ><span id="Total_EN">-,-</span></td>
             </tr>
             <tr>
                 <td colspan='2'>Previous day [kWh]</td>
-                <td><span id="Previous_Energy_positive">-,-</span></td>
-                <td><span id="Previous_Energy_negative">-,-</span></td>
+                <td><span id="Previous_EP">-,-</span></td>
+                <td><span id="Previous_EN">-,-</span></td>
             </tr>
             <tr>
                 <td colspan='2'>Current day [kWh]</td>
-                <td><span id="Current_Energy_positive">-,-</span></td>
-                <td><span id="Current_Energy_negative">-,-</span></td>
+                <td><span id="Current_EP">-,-</span></td>
+                <td><span id="Current_EN">-,-</span></td>
             </tr>
         </tbody>  
     </table>  
