--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -7,16 +7,16 @@
     <span id="powerTxt" style="font-size: 20px;'">-,- kW</span> 
 </div>
 <div class="container-sm mt-5 text-center">
-<table class="table  table-dark text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 20px;">
+<table class="table  table-dark table-bordered text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 20px;">
         <tbody> 
             <tr>
+                <td ><span id="kWh7">0</span></td>
+                <td ><span id="kWh6">0</span></td>
                 <td ><span id="kWh5">0</span></td>
                 <td ><span id="kWh4">0</span></td>
                 <td ><span id="kWh3">0</span></td>
                 <td ><span id="kWh2">0</span></td>
-                <td ><span>.</span></td>
                 <td ><span id="kWh1">0</span></td>
-                <td ><span id="kWh0">0</span></td>
                 <td>kWh</td>
             </tr>
         </tbody> 
