--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -15,7 +15,7 @@
                 <td ><span id="kWh5">0</span></td>
                 <td ><span id="kWh4">0</span></td>
                 <td ><span id="kWh3">0</span></td>
-                <td ><span id="kWh2">0</span></td>
+                <td ><span id="kWh2">.</span></td>
                 <td ><span id="kWh1">0</span></td>
                 <td>kWh</td>
             </tr>
