--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <div class="container-sm mt-1">
+    <div class="container-fluid bg-primary text-white pt-2 text-center">
+        <h4>CURRENT POWER  <span class="dot"></span> </h4>
+    </div>
 <div class="container-sm mt-1 text-center text-white">
     <canvas id="power"</canvas>
     </div>
 <div class="container-sm mt-1 text-center text-white">
     <span id="powerTxt" style="font-size: 20px;'">-,- kW</span> 
 </div>
-<div class="container-sm mt-5 text-center">
+
+    <div class="container-fluid bg-primary text-white pt-2 text-center mt-4">
+        <h4>TOTAL ENERGY CONSUMPTION</h4>
+    </div>
+<div class="container-sm mt-1 text-center">
 <table class="table  table-dark table-bordered text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 20px;">
         <tbody> 
             <tr>
