--- a/main/template/main.html
+++ b/main/template/main.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="cs-cz">
- 
     <head> 
-           
         <title>Wattmeter</title>
-        
-         <meta name="viewport" content="width=device-width, initial-scale=1">
-         <link href="main/static/style.css" rel="stylesheet">
+        <meta charset="UTF-8">
+        <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/MzxYPcKeHT7U6yeQFKhgBsQjCXPV81Z_DjlCNtcSlbh6EmGqMvqhzqxPZx-iUNLUMQ=s180-rw">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="main/static/style.css" rel="stylesheet">
         <script type="text/javascript" src="main/static/cached-webpgr.js"></script>
         <script type="text/javascript" src="main/static/loadLibrary.js"></script>
-
-    
     </head> 
-   
     <body onload="loadLibrary()">
-
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="#" id="overview" onclick="closeNav()">Overview</a>
@@ -24,11 +19,9 @@
           <a href="#" id="settings" onclick="closeNav()">Settings</a>
         </div>
         <span id="sideText" style="font-size:30px;cursor:pointer; color:#ffffff;" onclick="openNav()">&#9776; Overview</span>
-        
-      <!-- Loading Spinner Wrapper-->
+        <!-- Loading Spinner Wrapper-->
         <div class="loader text-center">
             <div class="loader-inner">
-
                 <!-- Animated Spinner -->
                 <div class="lds-roller mb-3">
                     <div></div>
@@ -43,13 +36,7 @@
                 <h4 class="text-uppercase font-weight-bold">Loading</h4>
             </div>
         </div>
-              
         <div class="mainContainer">
-        
-        
-        
         </div>
-
     </body>
-    
 </html>
