--- a/main/template/main.html
+++ b/main/template/main.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="main/static/loadLibrary.js"></script>
     </head> 
     <body onload="loadLibrary()">
+     <span class="dot" style="float: right corner;"></span> 
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="#" id="overview" onclick="closeNav()">Overview</a>
