--- a/main/static/style.css
+++ b/main/static/style.css
@@ -73,10 +73,12 @@ footer {
 }
 
 .dot {
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     border-radius: 50%;
-    display: inline-block
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
 }
 
 .loader {
