--- a/main/template/datatable.html
+++ b/main/template/datatable.html
@@ -2,7 +2,7 @@
 <div class="container-sm mt-1">
 
     <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h4>WATTMETER:  <span id="ID"> </span> <span class="dot"></span> </h4>
+        <h4>WATTMETER:  <span id="ID"> </span></h4>
     </div>
     <table class="table  table-dark text-center">
         <thead>
