--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <div class="container-sm mt-1">
     <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h6>CURRENT POWER  <span class="dot"></span> </h6>
+        <h6>CURRENT POWER </h6>
     </div>
 <div class="container-sm mt-1 text-center text-white">
     <canvas id="power"</canvas>
@@ -13,7 +13,7 @@
     <div class="container-fluid bg-primary text-white pt-2 text-center mt-4">
         <h6>TOTAL ENERGY CONSUMPTION</h6>
     </div>
-<div class="container-sm mt-3 text-center">
+<div class="container-sm mt-4 text-center">
 <table class="table  table-dark table-bordered text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 20px;">
         <tbody> 
             <tr>
@@ -26,6 +26,9 @@
                 <td ><span id="kWh1">0</span></td>
                 <td>kWh</td>
             </tr>
-        </tbody> 
+        </tbody>
+    </table>
+</div>
+<div id="evseGauge">
 </div>
 </div>
