--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -3,10 +3,10 @@
     <div class="container-fluid bg-primary text-white pt-2 text-center">
         <h6>CURRENT POWER </h6>
     </div>
-<div class="container-sm mt-1 text-center text-white">
-    <canvas id="power"</canvas>
+<div class="container-sm mt-3 text-center text-white">
+    <canvas id="power"></canvas>
     </div>
-<div class="container-sm mt-1 text-center text-white">
+<div class="container-sm text-center text-white">
     <span id="powerTxt" style="font-size: 20px;'">-,- kW</span> 
 </div>
 
