--- a/main/template/settings.html
+++ b/main/template/settings.html
@@ -5,7 +5,7 @@
     <div class="container-fluid mt-2 bg-primary pt-2 text-center">
         <h3>Wattmeter setup</h3>
     </div>
-    <div class="container text-center" id="settingTable">    
+    <div class="container text-center bg-dark" id="settingTable">    
         <div class="row">
             <div class="col">
                 <h6>Info</h6>
@@ -19,7 +19,7 @@
     <div class="container-fluid bg-primary pt-2 text-center">
         <h3>Wi-Fi Client Setup</h3>
     </div>
-    <div class="container-fluid  text-white">  
+    <div class="container-fluid  text-white bg-dark">  
         <table class="table table-borderless text-center  text-white">
             <tbody>
                 <tr class="ssidTable">
@@ -32,7 +32,7 @@
             </tbody>
         </table>
 
-        <div class="container text-center  text-white">
+        <div class="container text-center  text-white bg-dark">
             <div class="row  mt-3" >
                 <div class="col">
                     <p id="wifiStatus">  </p>
