--- a/main/template/main.html
+++ b/main/template/main.html
@@ -19,9 +19,7 @@
           <a href="#" id="energyChart" onclick="closeNav()">Energy charts</a>
           <a href="#" id="settings" onclick="closeNav()">Settings</a>
         </div>
-        <div style="background-color:#4B0082;">
-            <span id="sideText" style="font-size:30px;cursor:pointer; color:#ffffff;" onclick="openNav()">&#9776; Overview</span>
-        </div>
+        <span class="font-weight-bold" id="sideText" style="font-size:30px;cursor:pointer; color:#ffffff;" onclick="openNav()">&#9776; Overview</span>
         <!-- Loading Spinner Wrapper-->
         <div class="loader text-center">
             <div class="loader-inner">
