--- a/main/template/settings.html
+++ b/main/template/settings.html
@@ -2,7 +2,7 @@
 <html>
 <div class="container-sm text-white">
     
-    <div class="container-fluid mt-2 bg-primary pt-2 text-center">
+    <div class="container-fluid mt-3 bg-primary mb-2 text-center">
         <h3>Wattmeter setup</h3>
     </div>
     <div class="container text-center bg-dark" id="settingTable">    
@@ -16,7 +16,10 @@
         </div>       
     </div>
     
-    <div class="container-fluid bg-primary pt-2 text-center">
+    <div id="evseSetting">
+    </div>
+    
+    <div class="container-fluid bg-primary mt-3 text-center">
         <h3>Wi-Fi Client Setup</h3>
     </div>
     <div class="container-fluid  text-white bg-dark">  
