--- a/main/template/datatable.html
+++ b/main/template/datatable.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 
-
-    <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h4>WATTMETER:  <span id="ID"> </span></h4>
-    </div>
+<div class="container-sm text-center" >
+    <span class="dim">WATTMETER:  <span id="ID"> </span></span>
+    
     <table class="table  table-dark text-center">
         <thead>
             <tr style="background-color: #282828;">
@@ -107,8 +106,5 @@
             </tr>
         </tbody>  
     </table>  
-
-    <div id="evseContainer">
-    
-     </div>
+</div>
                      
