--- a/main/template/energyChart.html
+++ b/main/template/energyChart.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-    <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h6>HOURLY ENERGY CONSUMPTION</h6>
-    </div>
-        <canvas id="energyGraph_hourly" height ="430px" style="max-height: 430px;">
-            <p>Your browser does not support the canvas element.</p>
-        </canvas>
+<div class="container-sm text-center" >
+    <span class="dim">HOURLY ENERGY CONSUMPTION</span>
+    <canvas id="energyGraph_hourly" height ="430px" style="max-height: 430px;">
+        <p>Your browser does not support the canvas element.</p>
+    </canvas>
         
-            <div class="container-fluid bg-primary text-white mt-4 pt-2 text-center">
-        <h6>DAILY ENERGY CONSUMPTION</h6>
+    <div class="mt-4">
+        <span class="dim">DAILY ENERGY CONSUMPTION</span>
     </div>
-                <canvas id="energyGraph_daily" height ="430px" style="max-height: 430px;">
-            <p>Your browser does not support the canvas element.</p>
-        </canvas>
-
+    <canvas id="energyGraph_daily" height ="430px" style="max-height: 430px;">
+        <p>Your browser does not support the canvas element.</p>
+    </canvas>
+</div>
