--- a/main/template/powerChart.html
+++ b/main/template/powerChart.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-    <div class="container-fluid bg-primary text-white pt-2 text-center">
-        <h6>MINUTE POWER CONSUMPTION</h6>
+<div class="container-sm text-center" >
+    <span class="dim">MINUTE POWER CONSUMPTION</span>
+    <div class="mt-1">
+        <canvas id="powerGraph" height ="430px" style="max-height: 430;">
+            <p>Your browser does not support the canvas element.</p>
+        </canvas>
     </div>
-<div class="container-sm mt-1">
-    <canvas id="powerGraph" height ="430px" style="max-height: 430;">
-        <p>Your browser does not support the canvas element.</p>
-    </canvas>
 </div>
