--- a/main/template/settings.html
+++ b/main/template/settings.html
@@ -2,16 +2,16 @@
 <html>
 <div class="container-sm text-white">
     
-    <div class="container-fluid mt-3 bg-primary mb-2 text-center">
-        <h3>Wattmeter setup</h3>
+    <div class="container-fluid mt-3 mb-2 text-center">
+        <span class="dim">Wattmeter setup</span>
     </div>
-    <div class="container text-center bg-dark" id="settingTable">    
+    <div class="container text-center" id="settingTable">    
         <div class="row">
             <div class="col">
-                <h6>Info</h6>
+                <h6 class="unit">Info</h6>
             </div>
             <div class="col">
-                <h6>State</h6>
+                <h6 class="unit">State</h6>
             </div>
         </div>       
     </div>
@@ -19,23 +19,23 @@
     <div id="evseSetting">
     </div>
     
-    <div class="container-fluid bg-primary mt-3 text-center">
-        <h3>Wi-Fi Client Setup</h3>
+    <div class="container-fluid mt-3 text-center">
+        <span class="dim">Wi-Fi Client Setup</span>
     </div>
-    <div class="container-fluid  text-white bg-dark">  
+    <div class="container-fluid  text-white ">  
         <table class="table table-borderless text-center  text-white">
             <tbody>
                 <tr class="ssidTable">
                     <td id="ssid" colspan="2"><td>
                 </tr>        
                 <tr> 
-                    <td>Pass:</td> 
-                    <td><input id="passwordField"  name="password" type="password" /></td>
+                    <td class="unit" >Pass</td> 
+                    <td><input id="passwordField"  name="password" type="password"  style="width:80%;"/></td>
                 </tr>
             </tbody>
         </table>
 
-        <div class="container text-center  text-white bg-dark">
+        <div class="container text-center  text-white">
             <div class="row  mt-3" >
                 <div class="col">
                     <p id="wifiStatus">  </p>
