--- a/main/template/energyChart.html
+++ b/main/template/energyChart.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <div class="container-sm text-center" >
-    <span class="dim">HOURLY ENERGY CONSUMPTION</span>
+    <span class="dim">HOURLY ENERGY</span>
     <canvas id="energyGraph_hourly" height ="430px" style="max-height: 430px;">
         <p>Your browser does not support the canvas element.</p>
     </canvas>
         
     <div class="mt-4">
-        <span class="dim">DAILY ENERGY CONSUMPTION</span>
+        <span class="dim">DAILY ENERGY</span>
     </div>
     <canvas id="energyGraph_daily" height ="430px" style="max-height: 430px;">
         <p>Your browser does not support the canvas element.</p>
