--- a/main/template/powerChart.html
+++ b/main/template/powerChart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div class="container-sm text-center" >
-    <span class="dim">MINUTE POWER CONSUMPTION</span>
+    <span class="dim">MINUTE POWER</span>
     <div class="mt-1">
         <canvas id="powerGraph" height ="430px" style="max-height: 430;">
             <p>Your browser does not support the canvas element.</p>
