--- a/main/template/settings.html
+++ b/main/template/settings.html
@@ -15,10 +15,10 @@
             </div>
         </div>       
     </div>
-    
-    <div id="evseSetting">
+    <div class="container-fluid mt-3 text-center">
+        <div id="evseSetting">
+        </div>
     </div>
-    
     <div class="container-fluid mt-3 text-center">
         <span class="dim">Wi-Fi Client Setup</span>
     </div>
