--- a/main/static/style.css
+++ b/main/static/style.css
@@ -276,3 +276,52 @@ footer {
     color:white;
     font-weight: bold;
     }
+.charging{
+    height: 160px;
+    width:280px;
+    border:6px solid black;
+    border-radius: 8px;
+    position: absolute;
+    margin:auto;
+    left:0;
+    right:0;
+    }
+.top{
+    height: 55px;
+    width: 15px;
+    background-color: black;
+    position:relative;
+    left:280px;
+    top:45px;
+    border-radius: 0 5px 5px 0;
+    }
+
+@keyframes charge-1{
+    25%,100%{
+        opacity:1;
+        }
+    }
+@keyframes charge-2{
+    0%,25%{ 
+        opacity:0;
+        }
+    50%,100%{
+        opacity:1;
+        }
+    }
+@keyframes charge-3{
+    0%,50%{
+        opacity:0;
+        }
+    75%,100%{
+        opacity:1;
+        }
+    }
+@keyframes charge-4{
+    0%,75%{
+        opacity:0;
+        }
+    100%{
+        opacity:1;
+        }
+    }
