--- a/main/template/overview.html
+++ b/main/template/overview.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-
-<div class="text-center">
-    <div  style="text-align: center; width: 260px; height: 260px;border-radius: 100%;display: inline-block; position: relative;">
-            <canvas  id="power"  style="position: absolute; left: 50%;transform: translateX(-50%);" width=250 height=250> </canvas>
-            <span  class="value" id="powerTxt" style="position: absolute; left: 50%;transform: translateX(-50%);top:20%; font-size: 65px;">-,-</span>
-            <span  class="unit" style="position: absolute; left: 50%;transform: translateX(-50%);top:50%;">kW</span>
-            <span  class="dim" style="position: absolute; left: 50%;transform: translateX(-50%); top:65%;">POWER</span>
-        
-    </div> 
-</div>
-<div class="container-fluid text-center" >
-        <span  class="dim">TOTAL ENERGY</span>
-</div>
-<div class="container-fluid text-center">
-<table class="text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 28px; border-spacing: 5px;border-collapse: separate;">
-        <tbody  class="value"> 
-            <tr>
-                <td ><span id="kWh7">0</span></td>
-                <td ><span id="kWh6">0</span></td>
-                <td ><span id="kWh5">0</span></td>
-                <td ><span id="kWh4">0</span></td>
-                <td ><span id="kWh3">0</span></td>
-                <td ><span id="kWh2">.</span></td>
-                <td ><span id="kWh1">0</span></td>
-                <td class="unit">kWh</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="container-fluid text-center" >
-        <span class="dim">DAILY ENERGY</span>
-</div>
-<div class="container-fluid text-center">
-<table class="text-center" style="max-width:350px; margin-left: auto;margin-right: auto; font-size: 28px; border-spacing: 5px;border-collapse: separate;">
-        <tbody  class="value"> 
-            <tr>
-                <td ><span id="dkWh7">0</span></td>
-                <td ><span id="dkWh6">0</span></td>
-                <td ><span id="dkWh5">0</span></td>
-                <td ><span id="dkWh4">0</span></td>
-                <td ><span id="dkWh3">0</span></td>
-                <td ><span id="dkWh2">.</span></td>
-                <td ><span id="dkWh1">0</span></td>
-                <td class="unit">kWh</td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
-<div class="container-fluid text-center">
-    <div class="g-container">
-        <div class="g-number">
-            <span id='avgE'class="value">-,-</span><br>
-            <span class="dim">Avg. Energy</span><br>
-            <span class="unit">kWh<span>
-        </div>
-        <div class="g-contrast">
-            <div class="g-circle" ></div>
-        </div>
-    </div>
-</div>
-<div id="evseGauge">
-</div>
-<footer></footer>
+<!DOCTYPE html><div class="text-center"><div style="text-align:center; width:260px; height:260px;border-radius:100%;display:inline-block; position:relative;"><canvas id="power" style="position:absolute; left:50%;transform:translateX(-50%);" width=250 height=250></canvas><span class="value" id="powerTxt" style="position:absolute; left:50%;transform:translateX(-50%);top:20%; font-size:65px;">-,-</span><span class="unit" style="position:absolute; left:50%;transform:translateX(-50%);top:50%;">kW</span><span class="dim" style="position:absolute; left:50%;transform:translateX(-50%); top:65%;">POWER</span></div></div><div class="container-fluid text-center" ><span class="dim">TOTAL ENERGY</span></div><div class="container-fluid text-center"><table class="text-center" style="max-width:350px; margin-left:auto;margin-right:auto; font-size:28px; border-spacing:5px;border-collapse:separate;"><tbody class="value"><tr><td ><span id="kWh7">0</span></td><td ><span id="kWh6">0</span></td><td ><span id="kWh5">0</span></td><td ><span id="kWh4">0</span></td><td ><span id="kWh3">0</span></td><td ><span id="kWh2">.</span></td><td ><span id="kWh1">0</span></td><td class="unit">kWh</td></tr></tbody></table></div><div class="container-fluid text-center" ><span class="dim">DAILY ENERGY</span></div><div class="container-fluid text-center"><table class="text-center" style="max-width:350px; margin-left:auto;margin-right:auto; font-size:28px; border-spacing:5px;border-collapse:separate;"><tbody class="value"><tr><td ><span id="dkWh7">0</span></td><td ><span id="dkWh6">0</span></td><td ><span id="dkWh5">0</span></td><td ><span id="dkWh4">0</span></td><td ><span id="dkWh3">0</span></td><td ><span id="dkWh2">.</span></td><td ><span id="dkWh1">0</span></td><td class="unit">kWh</td></tr></tbody></table></div><div id="evseGauge"></div><footer></footer>
