--- a/main/template/powerChart.html
+++ b/main/template/powerChart.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><div class="container-sm text-center" ><span class="dim">LAST HOUR</span><div class="mt-1"><canvas id="powerGraph" height="430px" style="max-height:430;"><p>Your browser does not support the canvas element.</p></canvas></div></div>
+<!DOCTYPE html><div class="container-sm text-center"><span class="dim">LAST HOUR</span><div class="mt-1"><canvas id="powerGraph" class="g"><p>Does not support</p></canvas></div></div>
