--- a/main/static/style.css
+++ b/main/static/style.css
@@ -1,1 +1,144 @@
-._2v9s,body,html{background-color:#181818!important;}footer{height:180px;padding:10px;text-align:center;color:#fff;}.graphTable{height:50%;}.dot{height:15px;width:15px;border-radius:50%;float:right;margin-right:15px;margin-top:15px;}.chart-container{position:relative;margin:auto;height:80vh;width:80vw;}.sidenav{height:100%;width:0;position:fixed;z-index:1;top:0;left:0;background-color:#111;overflow-x:hidden;transition:.2s;padding-top:60px;}.sidenav a{padding:8px 8px 8px 32px;text-decoration:none;font-size:25px;color:#818181;display:block;transition:.5s;}.sidenav a:hover{color:#f1f1f1;background-color:#222;}.sidenav .closebtn{position:absolute;top:0;right:25px;font-size:36px;margin-left:50px;}.dim{color:#ffa500;font-size:26px;font-weight:bold;}.unit{color:#808080;font-size:28px;font-weight:bold;}.value{color:white;font-weight:bold;}.charging{height:160px;width:280px;border:6px solid black;border-radius:8px;position:absolute;margin:auto;left:0;right:0;}.top{height:55px;width:15px;background-color:black;position:relative;left:280px;top:45px;border-radius:0 5px 5px 0;}@keyframes charge-1{25%,100%{opacity:1}}@keyframes charge-2{0%,25%{opacity:0}50%,100%{opacity:1}}@keyframes charge-3{0%,50%{opacity:0}75%,100%{opacity:1}}@keyframes charge-4{0%,75%{opacity:0}100%{opacity:1}}.energyTable{max-width:350px;margin-left:auto;margin-right:auto;border-spacing:5px;font-size:34px;border-collapse:separate;}.g{height:430px;max-height:430px;}.gaugeElem{position:absolute;left:50%;transform:translateX(-50%);}.gaugeContainer{text-align:center;width:260px;height:260px;border-radius:100%;display:inline-block;position:relative;}.bg{background-color:#111;}
+.graphTable {
+    height: 50%;
+}
+.dot {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    float: right;
+    margin-right: 15px;
+    margin-top: 15px;
+}
+.chart-container {
+    position: relative;
+    margin: auto;
+    height: 80vh;
+    width: 80vw;
+}
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.2s;
+    padding-top: 60px;
+}
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.5s;
+}
+.sidenav a:hover {
+    color: #f1f1f1;
+    background-color: #222;
+}
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+.dim {
+    color: #ffa500;
+    font-size: 26px;
+    font-weight: bold;
+}
+.unit {
+    color: #808080;
+    font-size: 28px;
+    font-weight: bold;
+}
+.value {
+    color: white;
+    font-weight: bold;
+}
+.charging {
+    height: 160px;
+    width: 280px;
+    border: 6px solid black;
+    border-radius: 8px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
+.top {
+    height: 55px;
+    width: 15px;
+    background-color: black;
+    position: relative;
+    left: 280px;
+    top: 45px;
+    border-radius: 0 5px 5px 0;
+}
+@keyframes charge-1 {
+    25%,
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes charge-2 {
+    0%,
+    25% {
+        opacity: 0;
+    }
+    50%,
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes charge-3 {
+    0%,
+    50% {
+        opacity: 0;
+    }
+    75%,
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes charge-4 {
+    0%,
+    75% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.energyTable {
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    border-spacing: 5px;
+    font-size: 34px;
+    border-collapse: separate;
+}
+.g {
+    height: 430px;
+    max-height: 430px;
+}
+.gaugeElem {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.gaugeContainer {
+    text-align: center;
+    width: 260px;
+    height: 260px;
+    border-radius: 100%;
+    display: inline-block;
+    position: relative;
+}
+.bg {
+    background-color: #111;
+}
