--- a/main/template/main.html
+++ b/main/template/main.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/MzxYPcKeHT7U6yeQFKhgBsQjCXPV81Z_DjlCNtcSlbh6EmGqMvqhzqxPZx-iUNLUMQ=s180-rw" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="main/static/loader.css" rel="stylesheet" />
+    <link href="main/static/style.css" rel="stylesheet" />
     <script type="application/javascript" src="main/static/loadLibrary.js"></script>
 </head>
 
