--- a/main/template/main.html
+++ b/main/template/main.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/MzxYPcKeHT7U6yeQFKhgBsQjCXPV81Z_DjlCNtcSlbh6EmGqMvqhzqxPZx-iUNLUMQ=s180-rw" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="static/style.css" rel="stylesheet" />
-        <script type="application/javascript" src="static/loadLibrary.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link href="main/static/style.css" rel="stylesheet" />
+        <script type="application/javascript" src="main/static/loadLibrary.js"></script>
     </head>
     <body onload="loadLibrary()">
         <span id="dot" class="fas fa-wifi" ></span>
@@ -38,3 +37,4 @@
         <div class="mainContainer"></div>
     </body>
 </html>
+
