--- a/main/template/energyChart.html
+++ b/main/template/energyChart.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<div class="btn-group btn-group=lg" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-secondary">Hourly</button>
-    <button type="button" class="btn btn-secondary">Daily</button>
-    <button type="button" class="btn btn-secondary">Monthly</button>
-</div>
-<div class="container-sm text-center">
-    <span class="dim">HOURLY ENERGY</span><canvas id="barEnergy" class="g"><p>Does not support</p></canvas>
-    <canvas id="pieEnergy" class="g"><p>Does not support</p></canvas>
+<div class="container-sm text-center mt-3 mb-3 bg-dark">
+
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-dark btn-lg active">
+          <input type="radio" name="options" id="hourE" checked> Hourly
+        </label>
+        <label class="btn btn-lg btn-dark">
+          <input type="radio" name="options" id="dayE"> Daily
+        </label>
+        <label class="btn btn-lg btn-dark">
+          <input type="radio" name="options" id="monthE"> Monthly
+        </label>
+      </div>
+
+    <div class="container-sm mt-3">
+        <canvas id="barEnergy" class="g"><p>Does not support</p></canvas>
+    </div>
+    <div class="container-sm mt-1 mb-6">
+        <canvas id="pieEnergy" class="g"><p>Does not support</p></canvas>
+    </div>
 </div>
