--- a/main/template/powerChart.html
+++ b/main/template/powerChart.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><div class="container-sm text-center"><span class="dim">LAST HOUR</span><div class="mt-1"><canvas id="powerGraph" class="g"><p>Does not support</p></canvas></div></div>
+<!DOCTYPE html><div class="container-sm text-center mt-3 mb-3 bg-dark"><div class="btn-group btn-group-toggle" data-toggle="buttons"><label class="btn btn-dark btn-lg active"><input type="radio" name="options" checked>Last hour </label></div><div class="container-sm mt-3"><canvas id="powerGraph" class="g"><p>Does not support</p></canvas></div></div>
